--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "victor-dark-green-syntax",
+  "name": "victor-green-syntax",
   "theme": "syntax",
   "version": "0.0.0",
-  "description": "A short description of your syntax theme",
+  "description": "A cool green syntax theme",
   "keywords": [
     "syntax",
     "theme"
   ],
-  "repository": "https://github.com/atom/victor-dark-green-syntax",
+  "repository": "https://github.com/vityavv/victor-green-syntax",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
